tests/auto/corelib/io/io.pro
@@ -16,6 +16,7 @@ SUBDIRS=\
     qipaddress \
     qnodebug \
     qprocess \
+    qprocess-noapplication \
     qprocessenvironment \
     qresourceengine \
     qsettings \
